--- a/Mini-Museum/categorys.html
+++ b/Mini-Museum/categorys.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artists</title>
+    <title>Categorys</title>
+    <link rel="stylesheet" href="first-css.css">
   </head>
   <body>
+
     <header>
+      <a href="index.html">
       <h1>Wax Museum</h1>
-      <nav>
-        <ul>
-          <li><a href="artists.html">Artists</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="visit.html">Visit</a></li>
-        </ul>
-      </nav>
+    </a>
+      
+      
     </header>
+
+    <nav class="main-nav">
+        <ul >
+            <li><a href="categorys.html">Categorys</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="visit.html">Visit</a></li>
+        </ul>
+    </nav>
 
     <main>
       <h1>Categorys</h1>
@@ -36,7 +43,8 @@
         <h2>Actors</h2>
         <p>Wax dolls of all the Actors👇</p>
         <a href="gallery.html#Actors">
-          <img
+          <!-- <label for="22"> nnn</label> -->
+          <img 
             src="https://thumbs.dreamstime.com/b/october-thailand-bangkok-madame-tussauds-wax-museum-mr-bean-british-comedy-television-series-main-role-played-actor-161932845.jpg"
             alt=""
             height="300"
